Time: 31 ms (63.36%) | Memory: 51.2 MB (82.92%) - LeetSync